[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bcsfe"
authors = [{ name = "fieryhenry" }]
description = "A save file editor for The Battle Cats"
license = { text = "GPL-3.0-or-later License" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "aenum",
    "colored==1.4.4",
    "pyjwt",
    "requests",
    "pyyaml",
    "beautifulsoup4",
]
dynamic = ["version"]
keywords = ["battle cats", "save editor", "hacking"]

[project.urls]
Homepage = "https://github.com/fieryhenry/BCSFE-Python"
Repository = "https://github.com/fieryhenry/BCSFE-Python"
Issues = "https://github.com/fieryhenry/BCSFE-Python/issues"
Changelog = "https://github.com/fieryhenry/BCSFE-Python/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = { attr = "bcsfe.__version__" }

[tool.setuptools]
package-dir = { "" = "src" }

[project.scripts]
bcsfe = "bcsfe:run"
